<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_32"
        android:text="@string/android_practice" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_64"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_48"
            android:layout_marginEnd="@dimen/dimen_48"
            android:orientation="vertical">

            <Button
                android:id="@+id/constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/constraint_layout"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/login"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/pick_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/pick_contact"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/fragment"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/recycler_view"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/thread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/thread"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/handler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/handler"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/button_8"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/button_9"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:backgroundTint="@color/gray"
                android:text="@string/button_10"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
